--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -13,7 +13,7 @@
 		},
 	"graphics": {
 		"backgrounds": {
-			"victory_notification_img": "graphics/backgrounds/BGE.jpg"
+			"victory_notification_img": "graphics/backgrounds/eatsensorrray.png"
 		}
 	}
 }
