feat: remove UVC spawning (for now), adjust Parasumbical Cord system to only work when damage exceeds armor

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -13,7 +13,7 @@
 		},
 	"graphics": {
 		"backgrounds": {
-			"victory_notification_img": "graphics/backgrounds/eatsensorrray.png"
+			"victory_notification_img": "graphics/backgrounds/BGE.jpg"
 		}
 	}
 }
