--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -13,7 +13,8 @@
 		},
 	"graphics": {
 		"backgrounds": {
-			"victory_notification_img": "graphics/backgrounds/BGE.jpg"
+			"victory_notification_img": "graphics/backgrounds/BGE.jpg",
+			"svc_encounter": "graphics/backgrounds/dissectionbyNeoSpectra.png"
 		},
 		"beams": {
 			"svc_parasumbilical_beam": "graphics/weapons/beams/svc_parasumbilical_beam.png"
