fix: sector gen relationships

--- a/data/config/modSettings.json
+++ b/data/config/modSettings.json
@@ -4,5 +4,8 @@
       "svc_inksac": "BlockBeams,PrioMissile",
       "svc_fangcluster": "TargetShields"
     }
+  },
+  "SymbioticVoidCreatures": {
+    "doNotAdjustRelationsWith": []
   }
 }
