feat: more sounds

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -14,9 +14,9 @@
 		},
 	"graphics": {
 		"backgrounds": {
-			"victory_notification_img": "graphics/backgrounds/BGE.jpg",
-			"svc_encounter": "graphics/backgrounds/dissectionbyNeoSpectra.png",
-			"whale_encounter": "graphics/backgrounds/dissectionbyNeoSpectra.png",
+			"victory_notification_img": "graphics/backgrounds/dissectionbyNeoSpectra.png",
+			"svc_encounter": "graphics/backgrounds/BGE.jpg",
+			"whale_encounter": "graphics/backgrounds/Stjarwhal.png",
 },
 		"beams": {
 			"svc_parasumbilical_beam": "graphics/weapons/beams/svc_parasumbilical_beam.png"
