feat: cross-mod support
Compat with Combat Chatter, Take No Prisoners, [Starship Legends], Progressive S-Mods, [Automated Commands] and More Military Missions.
Mods in [ ] are not yet fully supported

--- a/data/config/modSettings.json
+++ b/data/config/modSettings.json
@@ -7,5 +7,17 @@
   },
   "SymbioticVoidCreatures": {
     "doNotAdjustRelationsWith": []
+  },
+  "MoreMilitaryMissions":{
+        "DmReinforcementFactionBlacklist": [
+            "vwl",
+        ],
+},
+  "TakeNoPrisoners": {
+
+    "factionsWithConfigs": [
+      "svc",
+      "vwl",	  
+    ]
   }
 }
