--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -17,9 +17,12 @@
 			"victory_notification_img": "graphics/backgrounds/dissectionbyNeoSpectra.png",
 			"svc_encounter": "graphics/backgrounds/BGE.jpg",
 			"whale_encounter": "graphics/backgrounds/Stjarwhal.png",
-},
+		},
 		"beams": {
 			"svc_parasumbilical_beam": "graphics/weapons/beams/svc_parasumbilical_beam.png"
+		},
+		"exotics": {
+			"VoidChitinPlating": "graphics/icons/void_chitin_plating.png"
 		}
 	}
 }
