--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -29,7 +29,8 @@
 			"svc_hunter_bar_event_portrait": "graphics/illustrations/space_bar.jpg"
 		},
 		"icons": {
-		    "svc_colony_crisis_icon" : "graphics/icons/void_chitin.png"
+		    "svc_colony_crisis_icon" : "graphics/icons/void_chitin.png",
+		    "svc_hunter_intel_entry" : "graphics/hullmods/alpha.png"
 		}
 	},
 	"ruleCommandPackages": [
