feat: new right click system for normal small Voidlings
To Do: add afterimages via MagicRender

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -5,6 +5,7 @@
 		"BloodEffect":"tecrys.svc.plugins.BloodEffect",
 		"SvcCombatPlugin":"tecrys.svc.CombatPlugin",
 		"tentacle_render":"tecrys.svc.plugins.tentacle_render",		
+		 "svc_dash": "tecrys.svc.plugins.QuickStrafeSystemActivatorPlugin",
 		#"ForceShieldDisablePlugin":"data.scripts.plugins.ForceShieldDisablePlugin",		
 		#"Acid":"data.scripts.plugins.Acid",				
 		
