--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -6,6 +6,7 @@
 		"SvcCombatPlugin":"tecrys.svc.CombatPlugin",
 		"tentacle_render":"tecrys.svc.plugins.tentacle_render",		
 		 "svc_dash": "tecrys.svc.plugins.QuickStrafeSystemActivatorPlugin",
+		 #"svc_tentacles": "tecrys.svc.plugins.GrapplerRopePlugin",
 		#"ForceShieldDisablePlugin":"data.scripts.plugins.ForceShieldDisablePlugin",		
 		#"Acid":"data.scripts.plugins.Acid",				
 		
@@ -26,6 +27,9 @@
 			"whale_encounter": "graphics/backgrounds/Stjarwhal.png",
 			"hunter_fleet": "graphics/backgrounds/Pursuitsml2.png",
 			"mastermind_encounter_dialog": "graphics/backgrounds/BGE.jpg"
+		},
+		"fx": {
+			"svc_tentacle_trail": "graphics/fx/svc_tentacle_trail.png"
 		},
 		"beams": {
 			"svc_parasumbilical_beam": "graphics/weapons/beams/svc_parasumbilical_beam.png"
