--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -5,7 +5,7 @@
 		"BloodEffect":"tecrys.svc.plugins.BloodEffect",
 		"SvcCombatPlugin":"tecrys.svc.CombatPlugin",
 		"tentacle_render":"tecrys.svc.plugins.tentacle_render",		
-		 "svc_dash": "tecrys.svc.plugins.QuickStrafeSystemActivatorPlugin",
+		 #"svc_dash": "tecrys.svc.plugins.QuickStrafeSystemActivatorPlugin",
 		 #"svcGuidedTentacle": "tecrys.svc.plugins.svcGuidedProjectile",
 		 #"svc_tentacles": "tecrys.svc.plugins.GrapplerRopePlugin",
 		#"ForceShieldDisablePlugin":"data.scripts.plugins.ForceShieldDisablePlugin",		
