feat: quest text changed

--- a/data/config/modSettings.json
+++ b/data/config/modSettings.json
@@ -6,7 +6,9 @@
     }
   },
   "SymbioticVoidCreatures": {
-    "doNotAdjustRelationsWith": []
+    "doNotAdjustRelationsWith": [
+	"svc",
+	],
   },
   "MoreMilitaryMissions":{
         "DmReinforcementFactionBlacklist": [
