feat: custom name sources

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -36,6 +36,7 @@
 				"intel":{
 			"whale_intel": "graphics/icons/whale_intel.png",
 			"hunter_intel": "graphics/icons/hunter_intel.png",
+			"whale_hm": "graphics/hullmods/stjarwhal.png",
 		},
 		"beams": {
 			"svc_parasumbilical_beam": "graphics/weapons/beams/svc_parasumbilical_beam.png"
