--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -54,6 +54,7 @@
 			"svc_toxin": "graphics/icons/svc_toxin.png"			
 		},
 		"icons": {
+					    "svc_meat_icon" : "graphics/icons/svc_meat.png",
 		    "svc_colony_crisis_icon" : "graphics/icons/svc_infestationoverlay.png",
 		    "svc_hunter_intel_entry" : "graphics/backgrounds/BGE.jpg",
 			"svc_mastermind_intel_icon" : "graphics/portraits/SVC/special/Mastermind.jpg"
