feat: refactor crisis mechanic of adding infestation hullmod to instead work via combat engine script without adding hullmods to ships

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -4,7 +4,8 @@
 		#"ProtectionTracker":"data.scripts.plugins.ProtectionTracker",
 		"BloodEffect":"tecrys.svc.plugins.BloodEffect",
 		"SvcCombatPlugin":"tecrys.svc.CombatPlugin",
-		"tentacle_render":"tecrys.svc.plugins.tentacle_render",		
+		"tentacle_render":"tecrys.svc.plugins.tentacle_render",
+		"SvcInfestationPlugin":"tecrys.svc.plugins.InfestationCombatPlugin",
 		 #"svc_dash": "tecrys.svc.plugins.QuickStrafeSystemActivatorPlugin",
 		 #"svcGuidedTentacle": "tecrys.svc.plugins.svcGuidedProjectile",
 		 #"svc_tentacles": "tecrys.svc.plugins.GrapplerRopePlugin",
